[project]
name = "medicalagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.3.26",
    "langchain-community>=0.3.26",
    "langchain-core>=0.3.67",
    "langchain-groq>=0.3.5",
    "langgraph>=0.5.0",
    "langgraph-cli[inmem]>=0.3.3",
]
